src/sample/Errors/M0001.st
// M0001: The subrange parameters are not within the valid range
FUNCTION_BLOCK M0001

    VAR
        _a: BYTE(-4095..4095);
    END_VAR
END_FUNCTION_BLOCK